# acta

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/cli/: mod.rs
src/cli/commands/: attach.rs  config.rs  detach.rs  kill.rs  list.rs  mod.rs  new.rs  plugin.rs
src/config/: mod.rs
src/git/: mod.rs
src/session/: mod.rs
src/tui/: mod.rs
