[package]
name = "acta"
version = "0.1.0"
edition = "2021"
authors = ["Peyton Spencer <peyton@omniaura.com>"]
description = "A terminal multiplexer for agentic coding"
license = "MIT"
repository = "https://github.com/omniaura/acta"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git operations
# git2 = "0.19"  # Temporarily disabled - requires OpenSSL dev libs

# Utilities
dirs = "6.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
